--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
+html {
+	font-size: 18px;
+}
 body {
 	margin: 0;
 	font-family: 'Roboto', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	background-color: #e5e5e5;
-	font-size: 18px;
 }
